force-app/main/default/objects/Mapping_Object__mdt/Mapping_Object__mdt.object-meta.xml
<CustomObject>
    <description>This custom metadata contains what element in an import message will be mapped to what Salesforce object.</description>
    <label>Mapping Object</label>
    <pluralLabel>Mapping Objects</pluralLabel>
</CustomObject>