force-app/main/default/objects/Mapping_Object__mdt/fields/Message_Payload_Node__c.field-meta.xml
<CustomField>
    <fullName>Message_Payload_Node__c</fullName>
    <description>This field maps a node that contains sub node(s) to a Salesforce object</description>
    <label>Message Payload Node</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>