force-app/main/default/objects/Mapping_Object__mdt/fields/Message_Type__c.field-meta.xml
<CustomField>
    <fullName>Message_Type__c</fullName>
    <description>With this field you can process messages in different ways. This value defines how the import logic is being processed.</description>
    <label>Message Type</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>