force-app/main/default/objects/Mapping_Object__mdt/fields/Salesforce_External_Id_Field__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_External_Id_Field__c</fullName>
    <description>The name of the external id field that needs to be used when doing the upsert.</description>
    <label>Salesforce External Id Field</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>