force-app/main/default/objects/Mapping_Object__mdt/fields/Salesforce_Object__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Object__c</fullName>
    <description>This field  shows that what Salesforce object the Message Payload Node will be mapped</description>
    <label>Salesforce Object</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>